--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Great+Vibes&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 body {
     font-family: 'Georgia', serif;
@@ -81,11 +82,76 @@ p {
 .details {
     margin-top: 30px;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .details div {
     width: 40%;
+}
+/* Estilo del reproductor de música */
+.reproductor-musica {
+    width: 380px;
+    padding: 5px 30px;
+    border-radius: 20px;
+    /* background-color: rgba(228, 228, 228, 0.5); */
+    /* margin-bottom: 0px; */
+}
+
+.reproductor-musica h1 {
+    color: #333;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+.reproductor-musica p {
+    font-size: 1rem;
+    margin-bottom: 0;
+
+}
+
+#progreso {
+    appearance: none;
+    width: 100%;
+    height: 5px;
+    background: rgba(165, 165, 165, 0.4);
+    border-radius: 4px;
+    margin: 32px 0 24px;
+    cursor: pointer;
+    margin-bottom: 0;
+}
+
+#progreso::-webkit-slider-thumb {
+    appearance: none;
+    background: rgba(165, 165, 165, 0.9);
+    width: 16px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    outline: 4px solid rgba(228, 228, 228, 0.9);
+    box-shadow: 0 6px 10px rgba(228, 228, 228, 0.3);
+}
+
+.controles button{
+    aspect-ratio: 1/1;
+    margin-bottom: 40px;
+    background-color: transparent;
+    /* color: #fff; */
+    border-radius: 50%;
+    padding: 5px;
+    outline: 0;
+    font-size: 1.8rem;
+    transition: all 0.1s linear;
+}
+
+.boton-reproducir-pausar:hover{
+    background-color: transparent;
+}
+
+.controles .iconoControl:hover{
+    transform: scale(1.2);
 }
 
 h2 {
@@ -97,42 +163,6 @@ h2 {
     font-size: 2em;
     margin-bottom: 10px;
 }
-
-/* Ocultar el reproductor original */
-#audio-control {
-    width: 60px;
-    height: 60px;
-    background-color: #edcfb6;
-    border: 2px solid #eeb99a;
-    border-radius: 50%;
-    margin-bottom: 30px;
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    color: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease;
-}
-
-#audio-control::before {
-    content: '▶'; /* Icono inicial: reproducir */
-    font-family: Arial, sans-serif;
-    display: block;
-    line-height: 1;
-}
-
-#audio-control.paused::before {
-    content: '❚❚'; /* Icono de pausa */
-    font-family: Arial, sans-serif;
-}
-
-#audio-control:hover {
-    background-color: #eeb99a; /* Cambia el color al pasar el ratón */
-}
-
 
 .footer {
     margin-top: 40px;
