--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ h1 {
     border: 8px solid #edcfb6; /* Marco acorde a los colores del diseño */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave */
     border-radius: 10px; /* Bordes redondeados */
+    transition: all 0.3s ease;
 }
 
 h3 {
@@ -315,6 +316,42 @@ button:hover {
         margin-top: 20px;
     }
 }
+
+/* Estilos del popup */
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    transition: opacity 1s ease, transform 0.5s ease;
+    z-index: 1000;
+}
+
+.popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    border: 5px solid #edcfb6;
+}
+
+.popup-content h2 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 2.5em;
+}
+
+/* Efecto de cierre */
+.popup-hidden {
+    opacity: 0;
+    transform: translateX(100%); /* Desplazar hacia la derecha */
+}
+
 
 
 
