--- a/style.css
+++ b/style.css
@@ -309,17 +309,17 @@ button:hover {
 
 @media (max-width: 480px) {
     .couple {
-        font-size: 2.9em;
+        font-size: 3.4em;
     }
 
     p,
     .verse {
         padding-bottom: 5px;
-        font-size: 1.2em;
+        font-size: 1.5em;
     }
 
     h2 {
-        font-size: 1.7em;
+        font-size: 1.9em;
     }
 
     .details div {
@@ -328,7 +328,7 @@ button:hover {
 
     button {
         padding: 8px 16px;
-        font-size: 1.2em;
+        font-size: 1.4em;
     }
 
     .countdown {
@@ -502,6 +502,28 @@ button:hover {
 
     .desktop-right {
         background-image: url('img/escritorio-derecha.png');
+    }
+
+    .open-btn {
+        position: absolute;
+        transform: translateY(-50%);
+        cursor: pointer;
+        z-index: 2;
+        background: none;
+        animation: pulse 2.2s infinite;
+    }
+
+    /* Efecto de pulsación */
+    @keyframes pulse {
+
+        0%,
+        100% {
+            transform: scale(1);
+        }
+
+        50% {
+            transform: scale(1.05);
+        }
     }
 }
 
