--- a/style.css
+++ b/style.css
@@ -340,6 +340,11 @@ button:hover {
         margin-top: 20px;
     }
 
+    .countdown {
+        font-size: 1.9em;
+        padding: 20px;
+    }
+
 }
 
 /* Estilos del popup */
