Arreglando estetica de la cuenta regresiva

--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ button:hover {
 .label {
     font-size: 14px;
     margin-top: 5px;
-    color: #FFFFFF;
+    color: #333;
 }
 
 /* Ajustes para pantallas más pequeñas */
